src/test/ui/wf/wf-in-fn-type-ret.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-type-ret.rs:9:8
   |
LL | struct MustBeCopy<T:Copy> {
   |                     ---- required by this bound in `MustBeCopy`
...
LL |     x: fn() -> MustBeCopy<T>
   |        ^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | struct Foo<T: std::marker::Copy> {
   |             ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
